--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'DM Sans', sans-serif;
+  background: black;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
 
 a {
@@ -13,4 +15,73 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+:root {
+  --blink-time: 3s;
+}
+
+
+.blink {
+  -webkit-animation: flicker 2s infinite;
+}
+
+@-webkit-keyframes flicker {
+  0% {
+    opacity: 0;
+  }
+
+  9% {
+    opacity: 0;
+  }
+
+  10% {
+    opacity: .5;
+  }
+
+  13% {
+    opacity: 0;
+  }
+
+  20% {
+    opacity: .5;
+  }
+
+  25% {
+    opacity: 1;
+  }
+}
+
+.blur-a {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  right: 127px;
+  top: 196px;
+  z-index: 1;
+  border-radius: 200px;
+  background: #3C1438;
+  -webkit-box-shadow: 0px 0px 250px 150px rgb(247 75 229 / 25%);
+  box-shadow: 0px 0px 2000px 150px rgb(247 75 229 / 25%);
+}
+
+.blur-b {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  right: 30px;
+  top: 367px;
+  border-radius: 200px;
+  background: #445B41;
+  box-shadow: 0px 0px 80px 75px rgba(94, 206, 105, 0.5);
+}
+
+.blur-c {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  left: 34px;
+  top: 350px;
+  background: #0F383A;
+  box-shadow: 0px 0px 200px 100px rgba(36, 200, 210, 0.35);
 }
